# git-clerk

./: CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts/: release.py
src/acta/: __init__.py
src/acta/cli/: __init__.py  board.py  branch.py  checks.py  commit.py  issue.py  milestone.py  pr.py  release.py  shared.py
src/acta/git/: __init__.py  branch.py  commit.py  config.py  state.py  tag.py
src/acta/github/: __init__.py  issue.py  label.py  milestone.py  pr.py
src/git_clerk/: cli.py  git.py  github.py
src/gitclerk/: __init__.py  cli.py
src/gitclerk/cli/: __init__.py  board.py  branch.py  commit.py  issue.py  milestone.py  pr.py  release.py  shared.py  ticket.py
src/gitclerk/git/: __init__.py  branch.py  commit.py  config.py  tag.py
src/gitclerk/github/: __init__.py  issue.py  label.py  milestone.py  pr.py
tests/integration/: conftest.py  test_board_commands.py  test_cli_board.py  test_cli_branch.py  test_cli_commit.py  test_cli_issue.py  test_cli_milestone.py  test_cli_pr.py  test_cli_release.py  test_gh_commands.py  test_git_commands.py
tests/unit/: conftest.py  test_branch.py  test_cli.py  test_cli_issue_slug.py  test_cli_shared.py  test_git_branch.py  test_git_state.py  test_git_tag.py  test_github.py  test_github_milestone.py  test_github_pr.py  test_release.py
